<resources>
    <string name="app_name">PAQ</string>
    <string name="toReplace">toReplace</string>
    <string name="description">Description</string>


    <string name="createNewAlarmTitle">New Alarm</string>
    <string name="saveAlarm">Save</string>
    <string name="cancelAlarm">Cancel</string>



    <!-- For setting up tabs in MainView -->
    <string name="alarmsText">ALARMS</string>
    <string name="worldClockText">WORLD CLOCK</string>
    <string name="stopWatchText">STOPWATCH</string>
    <string name="timerText">TIMER</string>

    <!-- For view_alarms_list -->
    <string name="addAlarm">ADD ALARM</string>

    <!-- view_detailed_alarm.xml -->
    <string name="detailed_label_snooze">SNOOZE</string>
    <string name="detailed_numberOfSnooze">NUMBER OF SNOOZE</string>
    <string name="detailed_snoozeDuration">SNOOZE DURATION</string>
    <string name="detailed_label_interactivity">INTERACTIVITY</string>
    <string name="detailed_intensity">INTENSITY</string>
    <string name="detailed_seqLength">SEQUENCE LENGTH</string>

    <!-- view_more.xml -->
    <string name="more_AboutPaq">ABOUT PAQ</string>
    <string name="more_ConnectDevice">CONNECT DEVICE</string>
    <string name="more_FAQ">FAQ</string>
    <string name="more_ReportProblem">REPORT A PROBLEM</string>


</resources>
