<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_base_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <Button
        android:id="@+id/bt_About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_AboutPaq" />

    <Button
        android:id="@+id/bt_ConnectDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_ConnectDevice" />

    <Button
        android:id="@+id/bt_FAQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_FAQ" />

    <Button
        android:id="@+id/bt_ReportProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_ReportProblem" />
</LinearLayout>