<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailed_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/cancelAlarm"
            android:onClick="cancelAlarm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_weight=".5"
            android:gravity="left|center"
            android:text="@string/cancelAlarm"
            android:textColor="@color/white"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/detailed_alarm_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/createNewAlarmTitle"
            android:textColor="@color/white"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/saveAlarm"
            android:onClick="saveAlarm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_weight=".5"
            android:gravity="right|center"
            android:text="@string/saveAlarm"
            android:textColor="@color/white"
            android:textSize="15dp"/>


    </LinearLayout>

    <TimePicker
        android:id="@+id/detailed_timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_snooze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_label_snooze"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_maxSnooze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_numberOfSnooze" />

            <TextView
                android:id="@+id/tv_numSnooze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/sb_numSnooze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_snoozeDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_snoozeDuration" />

            <TextView
                android:id="@+id/tv_snoozeDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/sb_snoozeDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_Ineractivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_label_interactivity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/label_intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_intensity" />

            <TextView
                android:id="@+id/tv_intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/sb_intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/label_seqLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_seqLength" />

            <TextView
                android:id="@+id/tv_seqLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/sb_seqLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>